samples/_failures_safe/1761659417_de6d8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68ed76a3.c: In function ‘main’:
./samples/SAFE/__tmp_68ed76a3.c:139:5: error: expected expression at end of input
  139 |     if (count == 0)
      |     ^~
./samples/SAFE/__tmp_68ed76a3.c:139:5: error: expected declaration or statement at end of input
